--- a/thankyou.html
+++ b/thankyou.html
@@ -14,7 +14,7 @@
             <nav>
                 <img class="logo" src=""/>
                 <ul id="nav-list">
-                    <li><a href="../ ../#about-me">About Me</a></li>
+                    <li><a href=" ../#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact-me">Contact Me</a></li>
                 </ul>
