--- a/thankyou.html
+++ b/thankyou.html
@@ -14,9 +14,9 @@
             <nav>
                 <img class="logo" src=""/>
                 <ul id="nav-list">
-                    <li><a href=" ../#about-me">About Me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
+                    <li><a href="https://egavilanes.github.io/#about-me">About Me</a></li>
+                    <li><a href="https://egavilanes.github.io/#projects">Projects</a></li>
+                    <li><a href="https://egavilanes.github.io/#contact-me">Contact Me</a></li>
                 </ul>
                 <button class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
