--- a/index.html
+++ b/index.html
@@ -55,32 +55,18 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="" alt="Project One Image" />
-                    <h3>Project One</h3>
-                    <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
+                    <img class="project-image" src="src/images/logo.png" alt="Project One Image" />
+                    <h3>MessHall</h3>
+                    <p class="subtext">Recipe website that allows students easy access to quick and affordable recipes.</p>
                     <hr/>
-                    <p class="subtext">View here</p>
+                    <p class="subtext"><a class="project-link" href="https://egavilanes.github.io/messhall">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="" alt="Project Two Image" />
-                    <h3>Project Two</h3>
-                    <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
+                    <img class="project-image" src="src/images/logo2.png" alt="Project Two Image" />
+                    <h3>estudi</h3>
+                    <p class="subtext">Pomodoro study timer.</p>
                     <hr/>
-                    <p class="subtext">View here</p>  
-                </div>
-                <div class="project-card">
-                    <img class="project-image" src="" alt="Project Three Image" />
-                    <h3>Project Three</h3>
-                    <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
-                    <hr/>
-                    <p class="subtext">View here</p>
-                </div>
-                <div class="project-card">
-                    <img class="project-image" src="" alt="Project Four Image" />
-                    <h3>Project Four</h3>
-                    <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
-                    <hr/>
-                    <p class="subtext">View here</p>
+                    <p class="subtext"><a class="project-link" href="https://estudi.netlify.app">View here</a></p>  
                 </div>
             </div>
         </section>
