--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/logo.png" alt="Project One Image" />
+                    <img class="project-image" src="src/images/messlogo.png" alt="Project One Image" />
                     <h3>MessHall</h3>
                     <p class="subtext">Recipe website that allows students easy access to quick and affordable recipes.</p>
                     <hr/>
