--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p>Hello! My name is Emily Gavilanes. I am a Computer Science: Game Design student at the University of California, Santa Cruz with a passion for Software Development.</p>
+                <p>Hello! My name is Emily Gavilanes. I am a Computer Science: Game Design student at the University of California, Santa Cruz with a passion for Software and Web Development.</p>
             </div>
             <div class="headshot-container">
                 <img class="headshot" src="src/images/SDS_UCSantaCruz_RedwoodSlug_WhiteGround.png" alt="Emily School Photo"/>
@@ -55,16 +55,16 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/messlogo.png" alt="Project One Image" />
+                    <img class="project-image" src="src/images/mess_screen.png" alt="Project One Image" />
                     <h3>MessHall</h3>
-                    <p class="subtext">Recipe website that allows students easy access to quick and affordable recipes.</p>
+                    <p class="subtext">Recipe website that allows students easy access to quick and affordable recipes</p>
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://egavilanes.github.io/messhall">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="src/images/logo2.png" alt="Project Two Image" />
+                    <img class="project-image" src="src/images/estudi_screen.png" alt="Project Two Image" />
                     <h3>estudi</h3>
-                    <p class="subtext">Pomodoro study timer.</p>
+                    <p class="subtext">Web app for pomodoro study timer</p>
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://estudi.netlify.app">View here</a></p>  
                 </div>
