--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://estudi.netlify.app">View here</a></p>  
                 </div>
+                <div class="project-card">
+                    <img class="project-image" src="src/images/coffee_screen.png" alt="Project Three Image" />
+                    <h3>Coffee Run</h3>
+                    <p class="subtext">Cafe-based endless runner game</p>
+                    <hr/>
+                    <p class="subtext"><a class="project-link" href="https://egavilanes.github.io/coffee-runner">View here</a></p>  
+                </div>
             </div>
         </section>
         
