--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Emily Gavilanes</h1>
-                    <p>Computer Science Student</p>
+                    <p>Gameplay Data Analyst</p>
                     <div class="button"><a href="#about-me">About Me</a></div>
                 </div>
                 <div class="socials">
@@ -45,7 +45,7 @@
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p>Hello! My name is Emily Gavilanes. I am a Computer Science: Game Design student at the University of California, Santa Cruz with a passion for Software and Web Development.</p>
+                <p>Hello! My name is Emily Gavilanes. I am currently a gameplay data analyst at NVIDIA where I enjoy collecting data and contributing to the improvement of various large language models. I love learning new tools and practices that help to turn ever-increasing datasets into impactful insights.</p>
             </div>
             <div class="headshot-container">
                 <img class="headshot" src="src/images/SDS_UCSantaCruz_RedwoodSlug_WhiteGround.png" alt="Emily School Photo"/>
